# PooFinal

app/: CMakeLists.txt  add_.cpp  add_.h  add_.ui  add_obstacle.cpp  add_obstacle.h  add_obstacle.ui  app.pro  collision.cpp  collision.h  collision.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  modify.cpp  modify.h  modify.ui  res.qrc  second_window.cpp  second_window.h
app/POO_Project/Ball_Class/: Balle.cpp  Balle.h  Balle_anwers.txt  Week_4_Revision_Balle.txt
app/POO_Project/Brique_Class/: Brique.cpp  Brique.h
app/POO_Project/ComposedObjects_Class/: ComposedObjects.h
app/POO_Project/Constantes/: Constantes.cpp  Constantes.h
app/POO_Project/Dessinable_Class/: Dessinable Class.txt  Dessinable.cpp  Dessinable.h
app/POO_Project/ForceField_class/: ChampsForces.cpp  ChampsForces.h  Week_3_ChampsForces.txt
app/POO_Project/Integrateurs/: Integrateur.txt  Integrateurs.cpp  Integrateurs.h
app/POO_Project/Integrateurs/Integrateur_Euler/: Integrateur_Euler.cpp  Integrateur_Euler.h
app/POO_Project/Integrateurs/Integrateur_EulerCromer/: Cromer.cpp  Cromer.h
app/POO_Project/Integrateurs/Integrateur_Newmark/: Newmark.cpp  Newmark.h
app/POO_Project/Integrateurs/Integrateur_RungKutta/: Runge-Kutta.cpp  Runge-Kutta.h
app/POO_Project/ObjetMobile/: ObjetMobile.cpp  ObjetMobile.h
app/POO_Project/ObjetSimple_class/: ObjetSimple.cpp  ObjetSimple.h
app/POO_Project/Obstacles/: Obstacles.cpp  Obstacles.h
app/POO_Project/Plan_Class/: Plan.cpp  Plan.h
app/POO_Project/PortionPlan/: PortionPlan.cpp  PortionPlan.h
app/POO_Project/Print_Class/: Print.cpp  Print.h
app/POO_Project/Ressort_Class/: Ressort.cpp  Ressort.h
app/POO_Project/Spherical_Pendulum/: PenduleSpherique.cpp  PenduleSpherique.h
app/POO_Project/SupportADessin/: SupportADessin.cpp  SupportADessin.h
app/POO_Project/System_Class/: System.cpp  System.h  System.txt
app/POO_Project/Vector_Class/New_Vector_Week_3_Final/: Vecteur.cpp  Vecteur.h
app/POO_Project/Vent_Class/: Vent.cpp  Vent.h
app/POO_Project/Ventilator_Class/: Ventilator.cpp  Ventilator.h  Ventilator.txt
app/POO_Project/Week_4_Pendule/: Pendule.cpp  Pendule.h
